[package]
name = "tile-grid"
version = "0.5.2"
authors = ["Pirmin Kalberer <pka@sourcepole.com>"]
edition = "2018"
description = "Library for map tile grid calculations."
homepage = "https://github.com/pka/tile-grid"
repository = "https://github.com/pka/tile-grid"
readme = "README.md"
license = "MIT"
keywords = ["geo", "vector-tiles", "mercator", "wgs84"]
categories = ["science::geo"]

[features]
projtransform = ["proj"]

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
once_cell = "1.17.1"
proj = { version = "0.27.0", default-features = false, optional = true }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_repr = "0.1.12"
serde_with = "2.3.2"
thiserror = "1.0.40"
